--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,33 @@ language: node_js
 node_js:
   - "iojs"
   - "7"
+
+services:
+- mongodb
+cache:
+  directories:
+    - node_modules
+deploy:
+- provider: s3
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  local_dir: dpl_cd_upload
+  skip_cleanup: true
+  on: &2
+    repo: pravipati/node-todo
+  bucket: travis-github-demo
+  region: us-east-1
+- provider: codedeploy
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  bucket: travis-github-demo
+  key: latest.zip
+  bundle_type: zip
+  application: TravisDeployDemo
+  deployment_group: TravisDeployDemo1
+  region: us-east-1
+  on: *2
+script:
+  - zip -r latest *
+  - mkdir -p dpl_cd_upload
+  - mv latest.zip dpl_cd_upload/latest.zip
